* Plugins Manager can give Plugins names * accessPlugin can specify an RDI installer for deps * accessPlugin can specify to retrieve without fetching dependencies * Installation dirs are specifics to Installers using directories only
git-svn-id: https://rdi.svn.sourceforge.net/svnroot/rdi@4 137cb177-7e76-4f49-9f3c-17f339b93885

--- a/TODO
+++ b/TODO
@@ -10,3 +10,4 @@
 ** In the dependenciesloader dialog, test internet connection before proposing installing Gems and Dlls.
 ** DependenciesLoaderDialog: The tree should have a little context menu for setting the decisions to ignore/specify directory/install-><Different locations>
 ** Implement a better looking ProgessDialog for DependenciesLoaderDialog
+** Separate CommonTools in an alternative package
