* Views are considered as Plugins also * ContextModifiers inherit the same class * Testers inherit the same class * Created the LocationSelectors plugins * Implemented Text GUI * Improved regression of plugins with LocationSelectors * ContextModifiers specify LocationSelectors * Testers list the possible ContextModifiers that can resolve their content.
git-svn-id: https://rdi.svn.sourceforge.net/svnroot/rdi@6 137cb177-7e76-4f49-9f3c-17f339b93885

--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@
 
 * Testing
 ** GUI regression
+** Regression should test automatically for each Installer type that depending on the location of the install (Local, System, User...), only the correct directories are altered.
+** Regression should warn when plugins don't have regression test cases
 
 * Development
 ** In the dependenciesloader dialog, test internet connection before proposing installing Gems and Dlls.
