* Implemented SimpleWxGUI with LocationSelector Directory * Implemented regression for SimpleWxGUI * Added ImageListManager to CommonTools * Bug correction: Gem installer did not accept parameters among content. * Bug correction: Gem installer did not set INSTALLDIR variable correctly. * Bug correction: URLcache was using URLAccess in a buggy way. * Bug correction: getBitmapFromURL returned 2 objects. * Bug correction: Dir.glob does not work correctly with '\'.
git-svn-id: https://rdi.svn.sourceforge.net/svnroot/rdi@15 137cb177-7e76-4f49-9f3c-17f339b93885

--- a/TODO
+++ b/TODO
@@ -4,9 +4,10 @@
 ** Create FAQ
 
 * Testing
-** GUI regression
 ** Regression should test automatically for each Installer type that depending on the location of the install (Local, System, User...), only the correct directories are altered.
 ** Regression should warn when plugins don't have regression test cases
+** Add cases were part of Testers are resolved (do GUIs correctly take the resolved ones into account ?)
+** Add generic cases testing that for each AffectingContextModifier in Testers plugins, they effectively resolve Testers.
 
 * Development
 ** In the dependenciesloader dialog, test internet connection before proposing installing Gems and Dlls.
