--- a/TODO
+++ b/TODO
@@ -11,6 +11,4 @@
 
 * Development
 ** In the dependenciesloader dialog, test internet connection before proposing installing Gems and Dlls.
-** DependenciesLoaderDialog: The tree should have a little context menu for setting the decisions to ignore/specify directory/install-><Different locations>
-** Implement a better looking ProgessDialog for DependenciesLoaderDialog
-** Separate CommonTools in an alternative package
+** Implement a progression dialog upon installation
