* Adopted new rUtilAnts API
git-svn-id: https://rdi.svn.sourceforge.net/svnroot/rdi@25 137cb177-7e76-4f49-9f3c-17f339b93885

--- a/TODO
+++ b/TODO
@@ -12,3 +12,4 @@
 * Development
 ** In the dependenciesloader dialog, test internet connection before proposing installing Gems and Dlls.
 ** Implement a progression dialog upon installation
+** Give the possiblity to provide simple APIs that will handle most common dependency descriptions
