* Local downloads are made in a Downloads sub-directory. * Better error handling of zip extraction. * Bug correction: Zip extraction did not set %INSTALLDIR% correctly for ContextModifiers.
git-svn-id: https://rdi.svn.sourceforge.net/svnroot/rdi@30 137cb177-7e76-4f49-9f3c-17f339b93885

--- a/TODO
+++ b/TODO
@@ -13,3 +13,4 @@
 ** In the dependenciesloader dialog, test internet connection before proposing installing Gems and Dlls.
 ** Implement a progression dialog upon installation
 ** Give the possiblity to provide simple APIs that will handle most common dependency descriptions
+** Add buttons/combos 'Ignore All' 'Install All local' 'Install All system'... in the SimpleWxGUI.
