* Implemented ProgressViews to give progression dialogs upon installation. * Implemented Text Progress View. * Implemented SimpleWxGUI Progress View. * Added possibility to specify preferred ProgressViews. * Regression: Implemented MuteProgressView to silently progress on test installations.
git-svn-id: https://rdi.svn.sourceforge.net/svnroot/rdi@33 137cb177-7e76-4f49-9f3c-17f339b93885

--- a/TODO
+++ b/TODO
@@ -8,9 +8,9 @@
 ** Regression should warn when plugins don't have regression test cases
 ** Add cases were part of Testers are resolved (do GUIs correctly take the resolved ones into account ?)
 ** Add generic cases testing that for each AffectingContextModifier in Testers plugins, they effectively resolve Testers.
+** Add generic cases for ProgressViews.
 
 * Development
 ** In the dependenciesloader dialog, test internet connection before proposing installing Gems and Dlls.
-** Implement a progression dialog upon installation
-** Give the possiblity to provide simple APIs that will handle most common dependency descriptions
+** Give the possiblity to provide simple APIs that will handle most common dependency descriptions.
 ** Add buttons/combos 'Ignore All' 'Install All local' 'Install All system'... in the SimpleWxGUI.
